Win32: Fix giscannermodule.c for Python 3.5+

Python 3.5+ is now built with Visual Studio 2015, which now has a
refactored set of CRT DLLs where CRT functions are placed in, so we need
to acquire the _get_osfhandle() from the correct CRT DLL so that we can
pass around file descriptors correctly between different CRT versions.

This patch will enable Windows builds of introspection files using Python
3.5+ to work correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=759531